[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Manahill Naeem", email = "165715242+Manahill-Naeem@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.0.19",
]

[project.scripts]
agent = "agent:main"
firstagent = "agent.main:firstagent"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
